--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dinamo-website",
+  "name": "quiet-pure",
   "version": "1.0.0",
-  "description": "Dinamo's website",
+  "description": "Quiet Pure website",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
